2011-06-08  Mark Pilgrim  <pilgrim@chromium.org>

        Reviewed by Tony Chang.

        IndexedDB test: key sort order for Date objects
        https://bugs.webkit.org/show_bug.cgi?id=62300

        * storage/indexeddb/key-sort-order-date-expected.txt: Added.
        * storage/indexeddb/key-sort-order-date.html: Added.

2011-06-08  Xiaomei Ji  <xji@chromium.org>

        Split move-by-word-visually.html into 2 tests since the test is continuing growing and caused
        time-out in Snowleopard Intel Leaks.

        We will need to do profiling to improve hot code path performance later.

        * editing/selection/move-by-word-visually-expected.txt: Removed.
        * editing/selection/move-by-word-visually-others-expected.txt: Added.
        * editing/selection/move-by-word-visually-others.html: Added.
        * editing/selection/move-by-word-visually-single-space-sigle-line-expected.txt: Copied from LayoutTests/editing/selection/move-by-word-visually-expected.txt.
        * editing/selection/move-by-word-visually-single-space-sigle-line.html: Copied from LayoutTests/editing/selection/move-by-word-visually.html.
        * editing/selection/move-by-word-visually.html: Removed.
        * editing/selection/resources/move-by-word-visually.js: Added.
        ():
        (flushLog):
        (fold):
        (logPositions):
        (nodeOfWordBreak):
        (logWordBreak):
        (positionEqualToWordBreak):
        (validateData):
        (collectWordBreaks):
        (setPosition):
        (moveByWord):
        (moveByWordOnEveryChar):
        (moveByWordForEveryPosition):
        (runMoveLeftRight):

2011-06-08  Mike Reed  <reed@google.com>

        Reviewed by James Robinson.

        [Skia] check for null-shader from gradient factory
        https://bugs.webkit.org/show_bug.cgi?id=62319

        * platform/chromium-linux/fast/gradients/crash-on-degenerate-gradient-expected.txt: Added.

2011-06-08  Kenneth Russell  <kbr@google.com>
